fix: modal on small screens and disable scrolling

--- a/src/components/blocks/modal/modal.scss
+++ b/src/components/blocks/modal/modal.scss
@@ -11,7 +11,9 @@
     &__item {
         @apply bg-white rounded-md max-w-3xl max-h-screen overflow-x-hidden overflow-y-auto pointer-events-auto;
 
-        min-width: 400px;
+        @screen sm {
+            min-width: 400px;
+        }
     }
 
     &__header {
@@ -33,11 +35,19 @@
     }
 
     &__content {
-        @apply mb-6 px-6;
+        @apply mb-6 px-2;
+
+        @screen sm {
+            @apply px-6;
+        }
     }
 
     &__footer {
-        @apply p-6 bg-gray-light border-t border-gray-dark;
+        @apply py-6 px-2 bg-gray-light border-t border-gray-dark;
+
+        @screen sm {
+            @apply px-6;
+        }
     }
 
     &--is-open {
